test/js/node/test/parallel/test-stream-destroy.js.log.txt
51 | 
52 | {
53 |   const server = http.createServer((req, res) => {
54 |     destroy(req);
55 |     req.on('error', common.mustCall((err) => {
56 |       assert.strictEqual(err.name, 'AbortError');
                  ^
AssertionError: Expected values to be strictly equal:
+ actual - expected

+ 'AggregateError'
- 'AbortError'
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-destroy.js:56:14
      at emitError (node:events:38:19)
      at emitErrorNT (internal:streams/destroy:111:21)
      at emitErrorCloseNT (internal:streams/destroy:94:26)
      at processTicksAndRejections (native:7:39)
error: undefined
237 | export default "internal:streams/destroy";
                        ^
AbortError: The operation was aborted
 code: "ABORT_ERR"

      at new AbortError (node:events:420:14)
      at destroyer (internal:streams/destroy:237:19)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-destroy.js:55:5
      at emit (node:events:74:48)
      at fetch (node:http:508:14)
Mismatched <anonymous> function calls. Expected exactly 1, actual 2.
    at <anonymous> (/Users/bun/code/bun/test/js/node/test/parallel/test-stream-destroy.js:95:28)
    at emit (node:events:74:48)
    at fetch (node:http:508:14) {
  originalLine: 271,
  originalColumn: 22
}
Mismatched <anonymous> function calls. Expected exactly 1, actual 0.
    at <anonymous> (/Users/bun/code/bun/test/js/node/test/parallel/test-stream-destroy.js:58:28)
    at emit (node:events:74:48)
    at fetch (node:http:508:14) {
  originalLine: 271,
  originalColumn: 22
}
